# i18n-validate

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
homebrew/: i18n-validate.rb
npm/: install.js  package.json
src/: cldr_plurals.rs  cli.rs  config.rs  diagnostic.rs  discovery.rs  layout.rs  lib.rs  locale.rs  main.rs
src/report/: json.rs  junit.rs  mod.rs  terminal.rs
src/validate/: empty_values.rs  extra_keys.rs  missing_keys.rs  missing_languages.rs  mod.rs  orphaned_languages.rs  parse_errors.rs  placeholders.rs  plural_requirements.rs  plural_structure.rs  untranslated.rs
tests/: cli_tests.rs  plural_requirements_tests.rs  validator_tests.rs
tests/fixtures/flat-json/: de.json
tests/fixtures/i18next/de/: translation.json
tests/fixtures/i18next/en/: translation.json
tests/fixtures/i18next/ja/: translation.json
tests/fixtures/single-file/: messages.xliff
